# Christmas-Led-Lights

./: .gitignore  README.md  flash.sh
arduino_lights/: lights.ino  strandtest.ino
arduino_lights/lights/: lights.ino
arduino_lights/strandtest/: strandtest.ino
scripts/: arm.py  flash.sh
xmas_lights/: pyproject.toml
xmas_lights/tests/: test_xmas_lights.py
xmas_lights/xmas_lights/: lights.py
